# viva-tools

./: .gitignore  README.md  index.html  main.py  pyproject.toml  render.yaml  sample.xlsx
.github/: deploy.yml
.github/workflows/: deploy.yml
assets/: index-030f053d.css  index-86b66ab9.js
backend/: .gitignore  pyproject.toml  requirements.txt  test_build.sh
backend/src/: __init__.py  main.py
backend/src/api/routes/: pdf.py
backend/src/api/schemas/: pdf.py
backend/src/core/: config.py
backend/src/services/: pdf_service.py
backend/src/utils/: pdf_extractor.py  text_normalizer.py
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: axios.ts
frontend/src/pages/: App.jsx
src/: extract_4llm_to_excel.py  extract_from_plumber.py  extract_from_pymu.py  pdf_to_excel.py
src/data/: 20241227_1.xlsx  template.xlsx  검진결과1_1_results.xlsx  검진결과1_3_results.xlsx  검진결과1_results.xlsx  안검진결과1_1_results.xlsx  안검진결과1_3_results.xlsx  안검진결과1_results.xlsx  안검진결과2_1_results.xlsx  안검진결과2_3_results.xlsx  안검진결과2_results.xlsx  안검진결과3_1_results.xlsx  안검진결과3_3_results.xlsx  안검진결과3_results.xlsx
src/result_data/: 4llm_1.md  4llm_2.md  4llm_not_1.md  pymu_1.py  pymu_2.py  pymu_not_1.py  pymu_not_3.py
