[tool.poetry]
name = "viva-tools"
version = "0.1.0"
description = ""
authors = ["gzero1728 <gzero1728@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.25.2"
langchain = "^0.3.15"
langchain-community = "^0.3.15"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pdfplumber = "^0.11.5"
pymupdf4llm = "^0.0.17"
fuzzywuzzy = "^0.18.0"
pypdf = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
