[tool.poetry]
name = "viva-tools-backend"
version = "0.1.0"
description = "PDF data extraction backend service"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.scripts]
dev = "src.main:run_dev"
start = "src.main:run"
build-test = "src.main:run_build_test"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pdfplumber = "^0.10.3"
python-multipart = "^0.0.6"
openpyxl = "^3.1.2"
pandas = "^2.1.3"
fuzzywuzzy = "^0.18.0"
pydantic-settings = "^2.1.0"
python-Levenshtein = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 